force-app/main/default/objects/Quote_Document_Key_Value__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Which lookup table this row belongs to, e.g. "Industry Map". Apex reads a whole category at once via QuoteDocumentKeyValueMap.get(category) - rows in other categories are invisible to that call.</inlineHelpText>
    <label>Category</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>