force-app/main/default/objects/Quote_Document_Key_Value__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <inlineHelpText>The lookup key within this Category, e.g. a Product Name. Must be unique within its Category - a duplicate key in the same category means one entry silently wins, so avoid creating one.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>