force-app/main/default/objects/Quote_Document_Key_Value__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>What Key__c maps to within this Category, e.g. the Industry Name a Product Name should be labeled with.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>